--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -18,6 +18,7 @@
         filter: brightness(120%);
         cursor: grab;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
+        outline: none;
     }
     .pres_restaurants{
         margin: 15px 0px;
@@ -73,9 +74,11 @@
     /**Primary color on hover**/
     &:hover, :focus{
         cursor: grab;
+        outline: none;
         background-color: lighten($color-primary, 35%);
         .fas{
             color: $color-primary;
+            outline: none;
         }
     }
 }
@@ -131,9 +134,11 @@
     }
     &:hover, :focus{
         cursor: grab;
+        outline: none;
         &::after{
             animation: button_like_fill 3000ms 100ms forwards ease-in-out;
             -webkit-animation: button_like_fill 3000ms 100ms forwards ease-in-out;
+            outline: none;
         }
     }
 }
