--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -151,6 +151,7 @@ h1{
         transition: transform 400ms;
         -webkit-transition: transform 400ms;
         box-shadow: darken($color-button-shadow, 40%) 3px 5px 7px;
+        outline: none;
     }
     & img{
         width: 100%;
