bug focus on desktop

--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -115,6 +115,7 @@
 .button_like{
     display: flex;
     align-items: center;
+    outline: none;
 }
 .fas.fa-heart{
     -webkit-text-stroke: 1px black;
