--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -125,14 +125,18 @@
     justify-content: flex-end;
     align-items: center;
     color: transparent;
-    overflow:hidden;
-    padding: 0px 5px;
     
     &::after{/****Button creation without modifying html for a background-color appearance on hover****/
         content: '\f004';
         position: absolute;
         @include heart_fill;
         opacity: 0;
+        overflow:hidden;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        width: 40px;
+        height: 40px;
     }
     &:hover, :focus{
         cursor: grab;
