--- a/Sass/themes/_stylemenu.scss
+++ b/Sass/themes/_stylemenu.scss
@@ -19,12 +19,11 @@
     align-items: center;
     background-color: $color-functionalities-back;
     width: 100%;
-    top: 250px;
     padding-bottom: 30px;
 }
 #presentation_menu img{
         width: 100%;
-        height: 260px;
+        height: 350px;
         object-fit: cover;
 }
 .presentation_menu_name_restaurant{
@@ -189,7 +188,7 @@
             -webkit-animation: dish_card_circle_translate 1000ms both ease-in-out;
             outline: none;
         }
-        & .far.fa-check-circle::before{
+        & .fa-check-circle::before{
             transform: rotate(1080deg);
             transition: transform 1000ms ease-in-out;
             -webkit-transition: transform 1000ms ease-in-out;
@@ -236,5 +235,10 @@
 {
 .dish_block{
     width: 90%;
+}
+#presentation_menu img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 }
