--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -115,7 +115,6 @@
 .button_like{
     display: flex;
     align-items: center;
-    outline: none;
 }
 .fas.fa-heart{
     -webkit-text-stroke: 1px black;
@@ -140,11 +139,11 @@
     }
     &:hover, :focus{
         cursor: grab;
-        outline: none;
+        
         &::after{
             animation: button_like_fill 3000ms 100ms forwards ease-in-out;
             -webkit-animation: button_like_fill 3000ms 100ms forwards ease-in-out;
-            outline: none;
+            -webkit-text-stroke: 1px transparent;
         }
     }
 }
