--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@
 .button_like {
   display: flex;
   align-items: center;
+  outline: none;
 }
 
 .fas.fa-heart {
@@ -241,6 +242,7 @@
   justify-content: flex-end;
   align-items: center;
   color: transparent;
+  outline: none;
 }
 .fas.fa-heart::after {
   /****Button creation without modifying html for a background-color appearance on hover****/
@@ -260,11 +262,13 @@
 }
 .fas.fa-heart:hover, .fas.fa-heart :focus {
   cursor: grab;
+  outline: none;
 }
 .fas.fa-heart:hover::after, .fas.fa-heart :focus::after {
   animation: button_like_fill 3000ms 100ms forwards ease-in-out;
   -webkit-animation: button_like_fill 3000ms 100ms forwards ease-in-out;
   -webkit-text-stroke: 1px transparent;
+  outline: none;
 }
 
 footer {
