--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -132,12 +132,7 @@
         position: absolute;
         @include heart_fill;
         opacity: 0;
-        overflow:hidden;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        width: 40px;
-        height: 40px;
+        
     }
     &:hover, :focus{
         cursor: grab;
@@ -146,6 +141,7 @@
         &::after{
             animation: button_like_fill 3000ms 100ms forwards ease-in-out;
             -webkit-animation: button_like_fill 3000ms 100ms forwards ease-in-out;
+            -webkit-text-stroke: 1px transparent;
             outline: none;
         }
     }
