--- a/Sass/components/_button.scss
+++ b/Sass/components/_button.scss
@@ -116,6 +116,7 @@
     display: flex;
     align-items: center;
     outline: none;
+    box-sizing: border-box;
 }
 .fas.fa-heart{
     -webkit-text-stroke: 1px black;
@@ -126,6 +127,8 @@
     align-items: center;
     color: transparent;
     outline: none;
+    box-sizing: border-box;
+    transition: all 3000ms ease-in-out;
     
     &::after{/****Button creation without modifying html for a background-color appearance on hover****/
         content: '\f004';
