--- a/Sass/layouts/_footer.scss
+++ b/Sass/layouts/_footer.scss
@@ -1,47 +1,51 @@
-footer{
+.footer{
     background-color: $color-footer-back;
     padding-left: 15%;
     padding-top: 15px;
     padding-bottom: 25px;
 
-        .logo{
-            font-family: 'Shrikhand', sans-serif;
-            font-size: 1.1em;
-            color: white;
-            padding-bottom: 10px;
+    &.index{
+        animation: page_loader_overflow 5000ms 100ms forwards ease-in-out;
+        -webkit-animation: page_loader_overflow 5000ms 100ms forwards ease-in-out;
+    }
+
+    .logo{
+        font-family: 'Shrikhand', sans-serif;
+        font-size: 1.1em;
+        color: white;
+        padding-bottom: 10px;
         }
-        .fas{
-            color: white;
-            font-size: 0.8em;
-            margin-right: 5px;
+    .fas{
+        color: white;
+        font-size: 0.8em;
+        margin-right: 5px;
             
-            &.fa-hands-helping{
-                font-size: 0.7em;
-                margin-right: 2px;
-            }
+        &.fa-hands-helping{
+            font-size: 0.7em;
+            margin-right: 2px;
         }
-        & a{
-            font-family: 'Roboto', sans-serif;
-            color: white;
-            text-decoration: none;
-            font-size: 1em;
-            font-weight: 350;
-        }
-        & p{
-            margin: 5px 0px;
-        }
+    }
+    & a{
+        font-family: 'Roboto', sans-serif;
+        color: white;
+        text-decoration: none;
+        font-size: 1em;
+        font-weight: 350;
+    }
+    & p{
+        margin: 5px 0px;
+    }
 }
-.footer{
+.footer_links{
     display: flex;
     justify-content: flex-start;
-
-    &_block.last{
+}
+.footer_block.last{
         padding-left: 30%;
-        }
 }
 /*responsive mobile*/
 @media all and (max-width: 667px){
-.footer{
+.footer_links{
     display: block;
 }
 .footer_block.last{
