--- a/Sass/style.css
+++ b/Sass/style.css
@@ -92,6 +92,30 @@
   }
 }
 
+@-webkit-keyframes page_loader_overflow {
+  0% {
+    opacity: 0;
+  }
+  99.9% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes page_loader_overflow {
+  0% {
+    opacity: 0;
+  }
+  99.9% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @-webkit-keyframes button_like_fill {
   0% {
     opacity: 0;
@@ -450,32 +474,37 @@
   outline: none;
 }
 
-footer {
+.footer {
   background-color: #353535;
   padding-left: 15%;
   padding-top: 15px;
   padding-bottom: 25px;
 }
 
-footer .logo {
+.footer.index {
+  animation: page_loader_overflow 5000ms 100ms forwards ease-in-out;
+  -webkit-animation: page_loader_overflow 5000ms 100ms forwards ease-in-out;
+}
+
+.footer .logo {
   font-family: 'Shrikhand', sans-serif;
   font-size: 1.1em;
   color: white;
   padding-bottom: 10px;
 }
 
-footer .fas {
+.footer .fas {
   color: white;
   font-size: 0.8em;
   margin-right: 5px;
 }
 
-footer .fas.fa-hands-helping {
+.footer .fas.fa-hands-helping {
   font-size: 0.7em;
   margin-right: 2px;
 }
 
-footer a {
+.footer a {
   font-family: 'Roboto', sans-serif;
   color: white;
   text-decoration: none;
@@ -483,11 +512,11 @@ footer a {
   font-weight: 350;
 }
 
-footer p {
+.footer p {
   margin: 5px 0px;
 }
 
-.footer {
+.footer_links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -502,7 +531,7 @@ footer p {
 
 /*responsive mobile*/
 @media all and (max-width: 667px) {
-  .footer {
+  .footer_links {
     display: block;
   }
   .footer_block.last {
@@ -682,7 +711,7 @@ footer p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: white;
+  color: transparent;
   font-size: 1.4em;
   position: absolute;
   right: -15%;
@@ -696,6 +725,14 @@ footer p {
       -ms-flex-pack: center;
           justify-content: center;
   z-index: 6;
+}
+
+.dish_card_box .fa-check-circle::before {
+  content: "\f058";
+  color: transparent;
+  background-color: white;
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
 .dish_card .dish {
@@ -789,6 +826,11 @@ footer p {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
+  .menu_titres {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    padding-left: 20px;
+  }
   .menu_restaurant {
     -webkit-box-align: start;
         -ms-flex-align: start;
@@ -806,16 +848,19 @@ footer p {
     padding: 10px 15px;
   }
   .presentation_menu_name_restaurant h1 {
-    font-size: 1.6em;
+    font-size: 1.3em;
   }
   .menu_restaurant h2 {
     font-size: 0.9em;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
 @media all and (max-width: 647px) {
   .dish_block {
-    width: 90%;
+    width: 100%;
   }
   #presentation_menu img {
     width: 100%;
@@ -832,8 +877,13 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-#main_page {
+.main_page {
   margin: 0 auto;
+}
+
+.main_page.index {
+  animation: page_loader_overflow 5000ms 100ms forwards ease-in-out;
+  -webkit-animation: page_loader_overflow 5000ms 100ms forwards ease-in-out;
 }
 
 /****header*****/
