--- a/Sass/utils/_keyframes.scss
+++ b/Sass/utils/_keyframes.scss
@@ -39,6 +39,17 @@
         opacity: 0;
     }
 }
+@keyframes page_loader_overflow{
+    0%{
+        opacity: 0;
+    }
+    99.9%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
 @keyframes button_like_fill{
     0%{
         opacity: 0;
